--- a/.github/workflows/aws-container-nginx.yaml
+++ b/.github/workflows/aws-container-nginx.yaml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Docker build
         run: |
-          docker build -t ghcr.io/LucJosin/aws-container-nginx:latest .
+          docker build -t ghcr.io/LucJosin/aws-container-nginx:latest ./docker/aws-container-nginx-projeto
 
       # Publish
 
